--- a/css/index.css
+++ b/css/index.css
@@ -23,18 +23,7 @@
     border: none;
     cursor: pointer;
 }
- .bouton-decouverte { 
-    background: linear-gradient(90deg, var(--accent-color) 0%, var(--highlight-color) 100%);
-    color: var(--secondary-bg-color);
-    font-size: 1.2em;
-    padding: 18px 40px;
-    box-shadow: 0 0 25px rgba(0, 224, 255, 0.5);
-}
-.bouton-decouverte:hover { 
-    background: linear-gradient(90deg, var(--highlight-color) 0%, var(--accent-color) 100%);
-    transform: translateY(-5px);
-    
-}
+
 
 .section-visuelle-accueil { 
     position: relative;
@@ -168,10 +157,10 @@ h2 {
         min-height: 250px;
     }
     .section-message-accroche { 
-        padding: 20px 10px;
+        padding: 20px 0 50px 0;
     }
     .section-message-accroche p {
-        margin-bottom: 15px;
+        margin: 15px 30px;
     }
     .bandeau-clients h2 {
         padding: 15px 0 10px 0;
@@ -194,5 +183,8 @@ h2 {
     .image-a-propos {
         width: 180px;
         margin: auto;
+    }
+    .btn-contact {
+        margin: 90px 0;
     }
 }
