--- a/css/contact.css
+++ b/css/contact.css
@@ -46,7 +46,7 @@
 }
 
 .titre-section {
-  
+   width: 80%;
     color: var(--text-color);
     text-align: center;
     filter: drop-shadow(0 0 15px var(--accent-color)) drop-shadow(0 0 30px var(--accent-color));
@@ -174,6 +174,11 @@
   }
   .bande-appel-action {
     padding: 10px 10px;
+  }
+  .titre-section {
+    margin: auto;
+    text-align: center;
+    padding: 20px;
   }
 }
 
