--- a/css/realisation.css
+++ b/css/realisation.css
@@ -104,7 +104,7 @@
         -webkit-overflow-scrolling: touch;
         /* Assure que chaque projet s'arrête net au centre lors du défilement */
         scroll-snap-type: x mandatory; 
-        gap: 20px; 
+        gap: 30px; 
         border-radius: var(--border-m);
     }
     
@@ -114,6 +114,7 @@
     }
     
     .projet-fiche {
+        filter: none;
         min-width: 310px; 
         height: 500px;
         /* Positionne l'arrêt de défilement au centre de l'élément */
