--- a/css/realisationprojet.css
+++ b/css/realisationprojet.css
@@ -60,6 +60,7 @@
     width: 90%;
    margin: auto;
 }
+
 .galerie-image {
     width: 100%;
     height: 300px;
@@ -90,6 +91,9 @@
 @media (min-width: 768px) {
     .details-grille {
         grid-template-columns: 2fr 1fr; 
+    }
+    .galerie-points {
+        display: none; 
     }
     
 }
@@ -130,6 +134,27 @@
         /* Assure que les marges ne cassent pas la largeur */
         margin: 0; 
     }
+    .galerie-points {
+    display: flex; 
+    justify-content: center; 
+    padding: 20px 0 0 0; 
+}
+
+.point {
+    height: 15px;
+    width:15px;
+    margin: 0 5px;
+    background-color:rgb(153, 149, 149);
+    border: solid 1px black;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.point.actif {
+    background-color: var(--accent-color); 
+}
 .section-action {
         padding: 0px 10px 50px 10px;
     }
